expected/main/lc/multiple-tycon-defns.err
ERROR: "actual/main/lc/multiple-tycon-defns.llc", line 3
  data T = A | B
  ^
Multiple definitions for "T"

ERROR: Aborting after previously reported error

